add comments for more information about security and endpoints

--- a/spring-boot-overview/03-actuator-demo/src/main/resources/application.properties
+++ b/spring-boot-overview/03-actuator-demo/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=myspringapp
 # health is exposed by default but for other we have to do it.
 # info actuator usually returns empty json we have to customize the info actuator.
 # you canuse "*" to expose all endpoints or expose them individually
+# user can also exclude endpoints by management.endpoints.web.exposure.exclude=health,info to exclude them, so no one
+# can access them
+
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
@@ -16,4 +19,9 @@ info.app.author=ashish
 
 # info.app.hehe=this is just a joke. This actually works you can make things like that
 # but use name them that is related to your project
+
+# we can add security to the actuator endpoints since they have some sensitive information, so if we apply that  then
+# user has to log in with some credential by default username will be 'user' and password will be on console panel.
+# But user can give its own username and password using spring.security.user.name=username same goes for password.
+
 
