add comments and remove comments

--- a/spring-boot-overview/04-actuator-security-demo/src/main/resources/application.properties
+++ b/spring-boot-overview/04-actuator-security-demo/src/main/resources/application.properties
@@ -23,5 +23,5 @@ info.app.author=ashish
 # we can add security to the actuator endpoints since they have some sensitive information, so if we apply that  then
 # user has to log in with some credential by default username will be 'user' and password will be on console panel.
 # But user can give its own username and password using spring.security.user.name=username same goes for password.
-
+# both health and info is not included in security that means they are public endpoints so we exclude them.
 
