exclude health and info endpoints because they are public endpoints so security doesn't work

--- a/spring-boot-overview/04-actuator-security-demo/src/main/resources/application.properties
+++ b/spring-boot-overview/04-actuator-security-demo/src/main/resources/application.properties
@@ -18,10 +18,14 @@ info.app.version=1.0.0
 info.app.author=ashish
 
 # info.app.hehe=this is just a joke. This actually works you can make things like that
-# but use name them that is related to your project
+# but use name them that is related to your project.
 
 # we can add security to the actuator endpoints since they have some sensitive information, so if we apply that  then
 # user has to log in with some credential by default username will be 'user' and password will be on console panel.
 # But user can give its own username and password using spring.security.user.name=username same goes for password.
 # both health and info is not included in security that means they are public endpoints so we exclude them.
 
+# disabling health and info endpoint
+management.endpoints.web.exposure.exclude=health,info
+
+# note: This is only for learning when actual development use these points because they are helpful.
