add some custom properties in application.properties file

--- a/spring-boot-overview/06-properties-demo/src/main/resources/application.properties
+++ b/spring-boot-overview/06-properties-demo/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=myspringapp
 # these are the config for exposing endpoints that come with acutator.
 # health is exposed by default but for other we have to do it.
 # info actuator usually returns empty json we have to customize the info actuator.
-# you canuse "*" to expose all endpoints or expose them individually
+# you can use "*" to expose all endpoints or expose them individually
 # user can also exclude endpoints by management.endpoints.web.exposure.exclude=health,info to exclude them, so no one
 # can access them
 
@@ -29,3 +29,38 @@ info.app.author=ashish
 management.endpoints.web.exposure.exclude=health,info
 
 # note: This is only for learning when actual development use these points because they are helpful.
+
+# Learning property injection through properties file since this is the main property file.
+
+# For that we create a dummy property for our spring-boot app and show it on the web using a diff endpoint.
+
+# Dummy project info
+
+project.name=spring-boot-tutorials
+project.team.leader=Ashish
+project.platform=intellij
+project.idea=leaning about spring boot
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
