change typos and spacing

--- a/spring-boot-overview/06-properties-demo/src/main/resources/application.properties
+++ b/spring-boot-overview/06-properties-demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=myspringapp
 # info actuator usually returns empty json we have to customize the info actuator.
 # you can use "*" to expose all endpoints or expose them individually
 # user can also exclude endpoints by management.endpoints.web.exposure.exclude=health,info to exclude them, so no one
-# can access them
+# can access them.
 
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
@@ -40,6 +40,7 @@ project.name=spring-boot-tutorials
 project.team.leader=Ashish
 project.platform=intellij
 project.idea=leaning about spring boot
+
 
 
 
