--- a/spring-boot-hibernate-jpa-crud/01-crudoperationsdemo/src/main/resources/application.properties
+++ b/spring-boot-hibernate-jpa-crud/01-crudoperationsdemo/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=crudoperationsdemo
+
+
+#setting of JDBC connection
+spring.datasource.url=jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+
+#turning off the spring boot banner
+spring.main.banner-mode=off
+
+#setting the logging state to warn so that only warning and errors are shown when compiled
+logging.level.root=warn
